# azure-mcp-server

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  server copy.py  server.py
tools/: __init__.py  storage_accounts.py  trigger_automation_runbooks.py  vm_details.py
tools/backup/: resource_groups copy.py  vm_details copy.py
tools/config/: auth.py
